# ee205-Animal-Farm

./: CMakeLists.txt  README.md  addCats.cpp  addCats.h  catDatabase.cpp  catDatabase.h  classAnimal.cpp  classAnimal.h  classCat.cpp  classCat.h  classList.cpp  classList.h  classMammal.cpp  classMammal.h  classNode.cpp  classNode.h  classSinglyLinkedList.cpp  classSinglyLinkedList.h  classWeight.cpp  classWeight.h  config.cpp  config.h  debug.cpp  debug.h  deleteCats.cpp  deleteCats.h  enumClassColor.h  enumClassGender.h  main.cpp  reportCats.cpp  reportCats.h  updateCats.cpp  updateCats.h
debug/: debug.cpp  debug.h  debugMain.cpp
src/: classAnimal.cpp  classAnimal.h  classCat.cpp  classCat.h  classList.cpp  classList.h  classMammal.cpp  classMammal.h  classNode.h  classSinglyLinkedList.cpp  classSinglyLinkedList.h  classWeight.cpp  classWeight.h  config.cpp  enumClassGender.h  main.cpp
